--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
+.body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.photo {
   text-align: center;
+  margin-bottom: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.image-container {
+  display: inline-block;
+  width: 300px;
+  height: 300px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.image {
+  border-radius: 50%;
+  border: solid rgba(255, 246, 236, 0.96) 4px;
+  box-shadow: 0px 0px 10px rgba(255, 215, 158, 0.58);
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.resume {
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: #795f4d;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.header {
+  text-align: center;
+  padding: 20px 0;
+  color: #fff6ec;
+  border-radius: 10px 10px 0 0;
+}
+
+.header__description {
+  font-size: 16px;
+  color: #fff7ee;
+  opacity: 95%;
+  line-height: 1.5;
+}
+
+.name {
+  font-size: 36px;
+  margin: 0;
+}
+
+.description {
+  font-size: 16px;
+  color: #fff7ee;
+  line-height: 1.5;
+}
+
+.experience, .contact, .portfolio, .education, .skills, .about {
+  margin-bottom: 5px;
+  padding: 20px;
+  border-bottom: 1px solid #ccc;
+}
+
+.label {
+  font-size: 24px;
+  color: #fff6ec;
+  margin-bottom: 10px;
+}
+
+.experience-item__label, .education-item__label {
+  font-size: 20px;
+  color: #fff7ee;
+}
+
+.education-item__describe {
+  font-size: 16px;
+  color: #fff7ee;
+  line-height: 1.5;
+}
+
+.contact__info, .portfolio__info {
+  font-size: 16px;
+  color: #fff7ee;
+  line-height: 1.5;
+}
+
+.list {
+  list-style-type: disc;
+  margin-left: 20px;
+  font-size: 16px;
+  color: #fff7ee;
+}
+
+.link {
+  color: #ffd79e;
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
+.star {
+  position: absolute;
+  font-size: 48px;
+  color: gold;
+}
+
+.particles {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: gold;
+  animation: particle-fall 2s linear infinite;
+}
+
+@keyframes particle-fall {
+  0% {
+    transform: translateY(-100%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100vh);
+    opacity: 0;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.animation-text {
+  animation: text-animation 2s ease-in-out both;
+  opacity: 0;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes text-animation {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.experience-item {
+  display: none;
 }
